Bug 163777 - If "Numbers Tab" is selected when you open "Format Cells", "Numbers Tab" is not selected by pressing [Ctrl+PageUp]
Summary: If "Numbers Tab" is selected when you open "Format Cells", "Numbers Tab" is n...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.4.0.3 release
Hardware: All All
: medium minor
Assignee: Not Assigned
URL:
Whiteboard: target:25.2.0 target:24.8.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Cell-Format-Dialog
  Show dependency treegraph
 
Reported: 2024-11-05 15:09 UTC by nobu
Modified: 2024-12-20 07:36 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description nobu 2024-11-05 15:09:06 UTC
Description:
If "Numbers Tab" is selected when you open "Format Cells", "Numbers Tab" is not selected by pressing [Ctrl+PageUp].

Steps to Reproduce:
1. Open Calc.
2. Open Dialog of "Format Cells". [Ctrl + 1]
3. Select "Numbers Tab" , and Cancel (Close Dialog).
4. Open Dialog of "Format Cells" again. [Ctrl + 1]
5. Press [Ctrl + PageUp] repeatedly to cycle through tabs.

Actual Results:
6. "Numbers Tab" is not selected.

Expected Results:
6. Stop at all tabs.


Reproducible: Always


User Profile Reset: No

Additional Info:
And [Ctrl + PageDown] does not select "Font Effects Tab".

---
Not Reproduced with
Version: 7.3.7.2 (x64) / LibreOffice Community

Reproducible with
Version: 24.8.3.1 (X86_64) / LibreOffice Community
Build ID: 65412f067af443213e726c93f137ccc85c9a1e06
CPU threads: 2; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: threaded

Reproducible with
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 491d6ef7f297206b99ce01d4f2d00c75719ef243
CPU threads: 2; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: threaded
Comment 1 m_a_riosv 2024-11-05 22:09:47 UTC
Reproducible
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 665dce4442e48b133b9fe1a2eb792ed3ef81d90c
CPU threads: 16; OS: Windows 11 X86_64 (10.0 build 26100); UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded

But I'm not sure if it is a bug with named ranges, or Calc doesn't allow print ranges from a different sheet. In fact, you can a range from other sheet but the sheet is not put in defined range.
Comment 2 m_a_riosv 2024-11-05 22:12:36 UTC
Please, forgot the previous comment.
Comment 3 Buovjaga 2024-11-17 18:54:07 UTC
Seems to depend on the UI (?) or something, I mostly got Font Effects skipped.

I *think* it's this change in 7.4: 196d9e16b7017db2225531cd240e7b6e8f7c1d66
Resolves tdf#146928 - Redesign charnamedialog

But maybe it's connected to the earlier d73602dc51aa8829fc88e5e67e2b0c4da6b8f715 as well.
Resolves tdf#139395 - Redesign of font name and effects pages
Comment 4 Eyal Rozenberg 2024-11-17 21:05:07 UTC
(In reply to Buovjaga from comment #3)
> 5. Press [Ctrl + PageUp] repeatedly to cycle through tabs.

For me, the tab cycling gets "stuck" once it gets to the Font tab.

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 5debf32cf09e865f2b241df3edd8461b92b5c1bf
CPU threads: 4; OS: Linux 6.6; UI render: default; VCL: gtk3
Locale: en-US (en_IL); UI: en-US
Calc: threaded
Comment 5 Heiko Tietze 2024-11-18 10:19:27 UTC
And with Ctrl+PgDown, the Font Effects are skipped. Very unlikely related to one of my patches. Tabs aren't skipped without clicking somewhere, and I sometimes it neither happens with the STR. Caolan, any idea?
Comment 6 Caolán McNamara 2024-11-25 16:58:56 UTC
https://gerrit.libreoffice.org/c/core/+/177277 for at least the "gen" case which is the initial one reported.

I think eyal's gtk case is different. I think that one might get "stuck" because there is only one tab in the embedded notebook and maybe it is cycling that single one to itself.
Comment 7 Buovjaga 2024-11-25 19:10:56 UTC
(In reply to Caolán McNamara from comment #6)
> https://gerrit.libreoffice.org/c/core/+/177277 for at least the "gen" case
> which is the initial one reported.
> 
> I think eyal's gtk case is different. I think that one might get "stuck"
> because there is only one tab in the embedded notebook and maybe it is
> cycling that single one to itself.

Works fine with kf6 as well.
Comment 8 Commit Notification 2024-11-25 19:26:41 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8f0a2c52f60f2d11bf4a1f8df246f651ce01360e

Resolves: tdf#163777 Ignore pageup and down when modifier held...

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2024-11-25 22:25:21 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/aa1c2fa118e6ad9c71769881b0017ec74cba3cae

Resolves: tdf#163777 Ignore pageup and down when modifier held...

It will be available in 24.8.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 nobu 2024-12-20 07:36:13 UTC
It works well in all of the following environments:

Version: 24.8.4.2 (X86_64) / LibreOffice Community
Build ID: bb3cfa12c7b1bf994ecc5649a80400d06cd71002
CPU threads: 4; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Vulkan; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: threaded

Version: 25.2.0.1.0+ (X86_64) / LibreOffice Community
Build ID: 468d47bdf44a772e989a0adbeb5bb097e3cb4f31
CPU threads: 4; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Vulkan; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL threaded

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 537645c0834eab2d277113f1e3fcf039c994832d
CPU threads: 4; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: default